--- a/shopping-list/index.html
+++ b/shopping-list/index.html
@@ -17,32 +17,32 @@
         <ul class="wrapper">
           <li>
             <label>
-              <input type="checkbox"><span class="shoplist_salt"> A lot of pickles</span>
+              <input type="checkbox"><p> A lot of pickles<span class="shoplist_text">(for the next lessons about CSS)</span></p>
             </label>
           </li>
           <li>
             <label>
-              <input type="checkbox"><span class="shoplist_apple"> 10 apple</span>
+              <input type="checkbox"><p> 10 apple<span class="shoplist_text">(for more CSS manipulations)</span></p>
             </label>
           </li>
           <li>
             <label>
-              <input type="checkbox"><span class="shoplist_orang"> 20 orange</span>
+              <input type="checkbox"><p> 20 orange<span class="shoplist_text">(because they are awesome)</span></p>
             </label>
           </li>
           <li>
             <label>
-              <input type="checkbox"><span class="shoplist_plates"> 13 plates</span>
+              <input type="checkbox"><p> 13 plates<span class="shoplist_text">(hm... they always disappear)</span></p>
             </label>
           </li> 
           <li>
             <label>
-              <input type="checkbox"><span class="shoplist_bentos"> 15 bentos</span>
+              <input type="checkbox"><p> 15 bentos</p>
             </label>
           </li>
           <li>
             <label>
-              <input type="checkbox"><span class="shoplist_sake"> 1 bottle of Sake</span>
+              <input type="checkbox"><p> 1 bottle of Sake<span class="shoplist_text">^_^ (for my friends)</span></p>
             </label>
           </li>
      </ul>
