--- a/CSS-Weather-Forecast/index.html
+++ b/CSS-Weather-Forecast/index.html
@@ -38,7 +38,7 @@
          </li>
          <li class="text__city text__city__new-york">
             <p>New York</p>
-            <span class="degree">17&degC <img class="icon__weather" src="/assets/images/wi-day-sleet-storm.svg" alt=""></span>
+            <span class="degree">17&degC <img class="icon__weather" src="./assets/images/wi-day-sleet-storm.svg" alt=""></span>
          </li>
          <li class="text__city text__city__new-dehli">
             <p>New Dehli</p>
