--- a/CSS-Weather-Forecast/index.html
+++ b/CSS-Weather-Forecast/index.html
@@ -12,49 +12,49 @@
       <h1 class="text__title">CSS Weather Forecast <img class="icon__weather" src="./assets/images/wi-sunrise.svg" alt="">
       </h1>
       <ul class="column">
-         <li class="text__city text__city__lisbon">
+         <li class="text__city text__city_lisbon">
             <p>Lisbon</p>
             <span class="degree">21&degC <img class="icon__weather" src="./assets/images/wi-day-sunny.svg" alt=""></span>
          </li>
-         <li class="text__city text__city__paris">
+         <li class="text__city text__city_paris">
             <p>Paris</p> 
             <span class="degree">11&degC <img class="icon__weather" src="./assets/images/wi-night-rain-mix.svg" alt=""></span>
          </li>
-         <li class="text__city text__city__belgrade">
+         <li class="text__city text__city_belgrade">
             <p>Belgrade</p>
             <span class="degree">15&degC <img class="icon__weather" src="./assets/images/wi-day-cloudy.svg" alt=""></span>
          </li>
-         <li class="text__city text__city__moscow">
+         <li class="text__city text__city_moscow">
             <p>Moscow</p>
             <span class="degree">21&degC <img class="icon__weather" src="./assets/images/wi-day-cloudy-high.svg" alt=""></span>
          </li>
-         <li class="text__city text__city__tel-aviv">
+         <li class="text__city text__city_tel-aviv">
             <p>Tel Aviv</p>
             <span class="degree">32&degC <img class="icon__weather" src="./assets/images/wi-hot.svg" alt=""></span>
          </li>
-         <li class="text__city text__city__cair">
+         <li class="text__city text__city_cair">
             <p>Cair</p>
             <span class="degree">21&degC <img class="icon__weather" src="./assets/images/wi-day-sunny.svg" alt=""></span>
          </li>
-         <li class="text__city text__city__new-york">
+         <li class="text__city text__city_new-york">
             <p>New York</p>
             <span class="degree">17&degC <img class="icon__weather" src="./assets/images/wi-day-sleet-storm.svg" alt=""></span>
          </li>
-         <li class="text__city text__city__new-dehli">
+         <li class="text__city text__city_new-dehli">
             <p>New Dehli</p>
             <span class="degree">17&degC <img class="icon__weather" src="./assets/images/wi-rain-wind.svg" alt=""></span>
          </li>
-         <li class="text__city text__city__san-francisco">
+         <li class="text__city text__city_san-francisco">
             <p>San Francisco</p>
             <span class="degree">15&degC <img class="icon__weather" src="./assets/images/wi-day-sunny-overcast.svg" alt=""></span>
          </li>
-         <li class="text__city text__city__tokyo">
+         <li class="text__city text__city_tokyo">
             <p>Tokyo</p>
             <span class="degree">8&degC <img class="icon__weather" src="./assets/images/wi-night-clear.svg" alt=""></span>
          </li>
-         <li class="text__city text__city__sydney">
+         <li class="text__city text__city_sydney">
             <p>Sydney</p>
-            <span class="degree">25&degC<img class="icon__weather" src="./assets/images/wi-night-partly-cloudy.svg" alt=""></span>
+            <span class="degree">25&degC <img class="icon__weather" src="./assets/images/wi-night-partly-cloudy.svg" alt=""></span>
          </li>
       </ul>
       <p class="text__final">Have a nice day and don't forget umbrella if you are in New Dehli now!</p>
